Botao pesquisar da tela de fermentacao ainda com erro; Resolvido problema merge

--- a/jexcelapi_2_6_12/jexcelapi/resources/functions_da.properties
+++ b/jexcelapi_2_6_12/jexcelapi/resources/functions_da.properties
@@ -5,7 +5,7 @@ acos=ARCCOS
 acosh=ARCCOSH
 address=ADRESSE
 and=OG
-areas=OMRÅDER
+areas=OMR\u00c5DER
 asin=ARCSIN
 asinh=ARCSINH
 atan=ARCTAN
@@ -22,22 +22,22 @@ char=TEGN
 chidist=CHIFORDELING
 chiinv=CHIINV
 chitest=CHITEST
-choose=VÆLG
+choose=V\u00c6LG
 clean=RENS
 code=KODE
 column=KOLONNE
 columns=KOLONNER
-concatenate=SAMMENKÆDNING
+concatenate=SAMMENK\u00c6DNING
 confidence=KONFIDENSINTERVAL
 cos=COS
 cosh=COSH
-count=TÆL
+count=T\u00c6L
 countblank=ANTAL.BLANKE
-countif=TÆL.HVIS
+countif=T\u00c6L.HVIS
 covar=KOVARIANS
 critbinom=KRITBINOM
 date=DATO
-datevalue=DATOVÆRDI
+datevalue=DATOV\u00c6RDI
 day=DAG
 days360=DAGE360
 db=DB
@@ -51,4 +51,4 @@ not=IKKE
 or=ELLER
 sum=SUM
 true=SAND
-year=ÅR
+year=\u00c5R
