--- a/jexcelapi_2_6_12/jexcelapi/resources/functions_de.properties
+++ b/jexcelapi_2_6_12/jexcelapi/resources/functions_de.properties
@@ -29,7 +29,7 @@ chidist=CHIVERT
 chiinv=CHIINV
 chitest=CHITEST
 choose=WAHL
-clean=SÄUBERN
+clean=S\u00c4UBERN
 code=CODE
 column=SPALTE
 columns=SPALTEN
@@ -42,7 +42,7 @@ cosh=COSHYP
 count=ANZAHL
 counta=ANZAHL2
 countblank=ANZAHLLEEREZELLEN
-countif=ZÄHLENWENN
+countif=Z\u00c4HLENWENN
 covar=KOVAR
 create=OBJECT	OBJEKT.ERSTELLEN
 critbinom=KRITBINOM
@@ -80,10 +80,10 @@ evaluate=AUSWERTEN
 even=GERADE
 exact=IDENTISCH
 exec=AUSF
-execute=AUSFÜHREN
+execute=AUSF\u00dcHREN
 exp=EXP
 expondist=EXPONVERT
-fact=FAKULTÄT
+fact=FAKULT\u00c4T
 fclose=DSCHLIESSEN
 fdist=FVERT
 files=DATEIEN
@@ -94,14 +94,14 @@ fisher=FISHER
 fisherinv=FISHERINV
 fixed=FEST
 floor=UNTERGRENZE
-fopen=DÖFFNEN
-forecast=SCHÄTZER
+fopen=D\u00d6FFNEN
+forecast=SCH\u00c4TZER
 formula=CONVERT	FORMEL.UMWANDELN
 fpos=DPOS
 fread=DLESEN
 freadln=DLESEN.ZEILE
-frequency=HÄUFIGKEIT
-fsize=DGRÖSSE
+frequency=H\u00c4UFIGKEIT
+fsize=DGR\u00d6SSE
 ftest=FTEST
 fv=ZW
 fwrite=DSCHREIBEN
@@ -123,7 +123,7 @@ if=WENN
 index=INDEX
 indirect=INDIREKT
 info=INFO
-initiate=KANAL.ÖFFNEN
+initiate=KANAL.\u00d6FFNEN
 input=EINGABE
 int=GANZZAHL
 intercept=ACHSENABSCHNITT
@@ -140,13 +140,13 @@ ispmt=ISPMT
 isref=ISTBEZUG
 istext=ISTTEXT
 kurt=KURT
-large=KGRÖSSTE
+large=KGR\u00d6SSTE
 left=LINKS
 leftb=LINKSB
-len=LÄNGE
+len=L\u00c4NGE
 lenb=LENB
 linest=RGP
-links=VERKNÜPFTE.DATEIEN
+links=VERKN\u00dcPFTE.DATEIEN
 ln=LN
 log=LOG
 log10=LOG10
@@ -186,7 +186,7 @@ npv=NBW
 numberstring=NUMBERSTRING
 odd=UNGERADE
 offset=BEREICH.VERSCHIEBEN
-open=DIALOG	DATEI.ÖFFNEN
+open=DIALOG	DATEI.\u00d6FFNEN
 options=LISTS.GET	OPTIONEN.LISTEN.ZUORDNEN
 or=ODER
 pause=PAUSE
@@ -195,13 +195,13 @@ percentile=QUANTIL
 percentrank=QUANTILSRANG
 permut=VARIATIONEN
 pi=PI
-pivot=ADD.DATA	PIVOT.DATEN.HINZUFÜGEN
+pivot=ADD.DATA	PIVOT.DATEN.HINZUF\u00dcGEN
 pmt=RMZ
 poisson=POISSON
 poke=SENDEN
 power=POTENZ
 ppmt=KAPZ
-press=TOOL	SYMBOL.DRÜCKEN
+press=TOOL	SYMBOL.DR\u00dcCKEN
 prob=WAHRSCHBEREICH
 product=PRODUKT
 proper=GROSS2
@@ -219,13 +219,13 @@ replace=ERSETZEN
 replaceb=ERSETZENB
 rept=WIEDERHOLEN
 request=ABFRAGEN
-reset=TOOLBAR	SYMBOLLEISTE.ZURÜCKSETZEN
+reset=TOOLBAR	SYMBOLLEISTE.ZUR\u00dcCKSETZEN
 restart=NEUSTART
 result=ERGEBNIS
-resume=WEITER.AUSFÜHREN
+resume=WEITER.AUSF\u00dcHREN
 right=RECHTS
 rightb=RECHTSB
-roman=RÖMISCH
+roman=R\u00d6MISCH
 round=RUNDEN
 rounddown=ABRUNDEN
 roundup=AUFRUNDEN
@@ -242,7 +242,7 @@ selection=AUSWAHL
 series=DATENREIHE
 set=NAME	NAMEN.ZUWEISEN
 set=VALUE	WERT.FESTLEGEN
-show=BAR	MENÜLEISTE.ZEIGEN
+show=BAR	MEN\u00dcLEISTE.ZEIGEN
 sign=VORZEICHEN
 sin=SIN
 sinh=SINHYP
@@ -250,7 +250,7 @@ skew=SCHIEFE
 sln=LIA
 slope=STEIGUNG
 small=KKLEINSTE
-spelling=CHECK	RECHTSCHREIBUNG.ÜBERPRÜFEN
+spelling=CHECK	RECHTSCHREIBUNG.\u00dcBERPR\u00dcFEN
 sqrt=WURZEL
 standardize=STANDARDISIERUNG
 stdev=STABW
@@ -283,9 +283,9 @@ tinv=TINV
 today=HEUTE
 transpose=MTRANS
 trend=TREND
-trim=GLÄTTEN
+trim=GL\u00c4TTEN
 trimmean=GESTUTZTMITTEL
-trunc=KÜRZEN
+trunc=K\u00dcRZEN
 ttest=TTEST
 type=TYP
 unregister=KREGISTER
