--- a/jexcelapi_2_6_12/jexcelapi/resources/functions_es.properties
+++ b/jexcelapi_2_6_12/jexcelapi/resources/functions_es.properties
@@ -99,7 +99,7 @@ fpos=POSICIONA
 fread=LEERA
 freadln=LEERALN
 frequency=FRECUENCIA
-fsize=TAMAÑOA
+fsize=TAMA\u00d1OA
 ftest=PRUEBA.F
 fv=VF
 fwrite=ESCRIBIRA
@@ -319,7 +319,7 @@ weekday=DIASEM
 weibull=DIST.WEIBULL
 window=TITLE	VENTANA.TITULO
 windows=VENTANAS
-year=AÑO
+year=A\u00d1O
 ztest=PRUEBA.Z
 false=FALSO
 true=VERDADERO
